--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   ],
   "main": "index.js",
   "scripts": {
+    "docs:build": "vuepress build docs",
+    "docs:dev": "vuepress dev docs",
     "example:build": "vuepress build example --temp example/.temp",
     "example:dev": "vuepress dev example --temp example/.temp",
     "lint": "eslint . --ext .js,.vue"
@@ -52,7 +54,6 @@
     "@vuepress/plugin-nprogress": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
     "@vuepress/plugin-search": "^1.7.1",
-    "dayjs": "^1.8.19",
     "remove-markdown": "^0.3.0",
     "vue-feather-icons": "^4.21.0",
     "vuepress-plugin-container": "^2.0.2",
