--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "author": "aj-wi<ajwipo@gmail.com>",
+  "main": "index.js",
   "files": [
     "index.js",
     "styles",
@@ -25,10 +26,10 @@
     "fonts",
     "components"
   ],
-  "main": "index.js",
   "scripts": {
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs",
+    "deploy": "npm run docs:build && gh-pages -d docs/.vuepress/dist",
     "example:build": "vuepress build example --temp example/.temp",
     "example:dev": "vuepress dev example --temp example/.temp",
     "lint": "eslint . --ext .js,.vue"
@@ -66,6 +67,7 @@
     "eslint-config-sherry": "0.0.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
+    "gh-pages": "^3.2.3",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
