--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "vuepress-theme-ajwi",
   "version": "1.0.3",
-  "description": "Another blog theme for VuePress",
+  "description": "blog theme for VuePress",
   "main": "index.js",
   "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:dev": "vuepress dev docs",
+    "dbuild": "vuepress build docs",
+    "ddev": "vuepress dev docs",
     "deploy": "gh-pages -d docs/.vuepress/dist",
-    "example:build": "vuepress build example --temp example/.temp",
-    "example:dev": "vuepress dev example --temp example/.temp",
-    "lint": "eslint . --ext .js,.vue"
+    "ebuild": "vuepress build example --temp example/.temp",
+    "edev": "vuepress dev example --temp example/.temp"
   },
   "repository": {
     "type": "git",
@@ -24,12 +23,12 @@
     "vuepress-theme-blog",
     "vuepress-theme-ajwi"
   ],
-  "author": "aj-wi<ajwipo@gmail.com>",
+  "author": "AJ-Wi<ajwipo@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/aj-wi/aj-theme-blog_vuepress/issues"
+    "url": "https://github.com/aj-wi/vuepress-theme-ajwi/issues"
   },
-  "homepage": "https://ajwi.github.io/aj-theme-blog_vuepress",
+  "homepage": "https://aj-wi.github.io/vuepress-theme-ajwi",
   "files": [
     "index.js",
     "styles",
@@ -39,21 +38,15 @@
   ],
   "dependencies": {
     "@vuepress/plugin-blog": "^1.9.4",
-    "@vuepress/plugin-nprogress": "^1.8.2",
-    "@vuepress/plugin-pwa": "^1.8.2",
-    "@vuepress/plugin-search": "^1.8.2",
-    "remove-markdown": "^0.3.0",
+    "@vuepress/plugin-nprogress": "^1.9.7",
+    "@vuepress/plugin-search": "^1.9.7",
+    "remove-markdown": "^0.5.0",
     "vue-feather-icons": "^5.1.0",
     "vuepress-plugin-container": "^2.1.5",
     "vuepress-plugin-smooth-scroll": "^0.0.10"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^6.0.1",
-    "gh-pages": "^3.2.3",
-    "vuepress": "^1.8.2"
+    "gh-pages": "^4.0.0",
+    "vuepress": "^1.9.7"
   }
 }
