--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
     "gh-pages": "^5.0.0",
-    "vuepress": "^1.8.2",
+    "vite": "^4.1.4",
     "vitepress": "^1.0.0-alpha.45",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vuepress": "^1.8.2"
   }
 }
